--- a/cssConcept/system.css
+++ b/cssConcept/system.css
@@ -1,33 +1,33 @@
 .system {
-  margin-top: 25px;
-  height: 100vh;
-  width: 100%;
   display: grid;
   grid-template-areas:
-    "systemStatus systemPreview file"
-    "systemStatus systemPreview usedDevices";
+    "systemStatus systemPreview wrapper";
   grid-template-columns: 1fr 2fr 1fr;
-  grid-template-rows: 200px 1fr;
-  row-gap: 25px;
+  column-gap: 25px;
+  row-gap: 17px;
 }
 
-.system .systemStatus {
-  grid-area: systemStatus;
-  max-height: 850px;
-  min-width: 270px;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-}
+.system .panelContainer { padding: 15px 20px 15px 10px; }
+.system .panelContentContainer { padding-left: 15px; }
+.system .panelHeaderContainer { padding: 0; }
+.system .panelHeaderContainer h3 { margin: 0 0 30px; }
+.usedDevices .panelHeaderContainer h3 { padding: 20px 24px; }
 
-.systemStatus .systemPreviewContainer {
-  height: 100%;
-  flex: 1;
-}
+.system .systemStatus { grid-area: systemStatus; place-self: start end; }
+.system .systemPreview { grid-area: systemPreview; }
+.system .wrapper { grid-area: wrapper; place-self: start start;}
 
-.systemPreviewContainer ol {
-  margin: 0;
-}
+.system .systemStatus,
+.system .wrapper { width: 100%; max-width: 325px; }
+.system .systemPreview { width: 100%; max-width: 1100px; }
+
+.system .systemStatus { display: flex; flex-direction: column; }
+
+.system .systemFiles { margin-bottom: 17px; }
+
+.systemStatus .systemPreviewContainer { height: 100%; flex: 1; }
+
+.systemPreviewContainer ol { margin: 0; list-style: none; }
 
 .systemPreviewContainer .divider {
   height: 1px;
@@ -36,31 +36,9 @@
   margin: 0 auto;
 }
 
-.systemStatusContainer {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-}
+.systemPreviewContainer > div { margin: 10px; }
 
-.systemStatusContainer .systemState {
-  place-self: center start;
-}
-
-.systemStatusContainer .systemOutput {
-  place-self: center;
-  margin-left: 45px;
-}
-
-.systemPreviewContainer > div {
-  margin: 10px;
-}
-
-.systemPreviewContainer ol {
-  list-style: none;
-}
-
-.systemPreviewContainer span {
-  font-weight: 800;
-}
+.systemPreviewContainer span { font-weight: 800; }
 
 .systemPreviewContainer .devices {
   display: grid;
@@ -68,6 +46,18 @@
     "description description"
     "deviceList deviceAmountList";
   grid-template-columns: 150px 1fr;
+}
+
+.systemStatusContainer {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.systemStatusContainer .systemState { place-self: center start; }
+
+.systemStatusContainer .systemOutput {
+  place-self: center;
+  margin-left: 45px;
 }
 
 .devices .deviceListHeader {
@@ -244,22 +234,4 @@
   height: 30px;
   place-self: center end;
   border: none;
-}
-
-.system .systemPreview {
-  grid-area: systemPreview;
-  height: 100%;
-  width: 95%;
-}
-
-.system .systemFiles {
-  grid-area: file;
-  height: 100%;
-}
-
-.system .usedDevices {
-  grid-area: usedDevices;
-  max-height: 650px;
-  height: 100%;
-  overflow: auto;
 }
