--- a/cssConcept/system.css
+++ b/cssConcept/system.css
@@ -21,148 +21,76 @@
 .system .wrapper { width: 100%; max-width: 325px; }
 .system .systemPreview { width: 100%; max-width: 1100px; }
 
-.system .systemStatus { display: flex; flex-direction: column; }
-
 .system .systemFiles { margin-bottom: 17px; }
 
-.systemStatus .systemPreviewContainer { height: 100%; flex: 1; }
+.systemStatusContainer .panelContentContainer { width: 100%; }
 
-.systemPreviewContainer ol { margin: 0; list-style: none; }
-
-.systemPreviewContainer .divider {
-  height: 1px;
-  width: 85%;
-  border-bottom: 1px solid rgba(39, 39, 39, 0.28);
-  margin: 0 auto;
+.systemStatusContainer h4 {
+  margin: 0;
+  font-size: 13px;
+  font-weight: 400;
+  text-transform: uppercase;
 }
 
-.systemPreviewContainer > div { margin: 10px; }
-
-.systemPreviewContainer span { font-weight: 800; }
-
-.systemPreviewContainer .devices {
-  display: grid;
-  grid-template-areas:
-    "description description"
-    "deviceList deviceAmountList";
-  grid-template-columns: 150px 1fr;
+.systemStatusContainer ol,
+.powerSupplyContainer ol {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  padding: 20px 0 20px 15px;
+  margin: 0;
+  list-style: none;
+  font-size: 12px;
+  row-gap: 15px;
 }
 
-.systemStatusContainer {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
+.powerSupplyContainer ol { padding: 0; margin-bottom: 20px; row-gap: 20px; }
+
+.systemStatusContainer ol li,
+.powerSupplyContainer ol li {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
 }
 
-.systemStatusContainer .systemState { place-self: center start; }
-
-.systemStatusContainer .systemOutput {
-  place-self: center;
-  margin-left: 45px;
+.systemStatusContainer ol li div,
+.powerSupplyContainer ol li div {
+  display: flex;
+  align-items: end;
 }
 
-.devices .deviceListHeader {
-  grid-area: description;
-  margin-left: 15px;
+.systemStatusContainer ol li div:has(span),
+.powerSupplyContainer ol li div:has(span) { font-weight: 300; }
+
+.systemStatusContainer ol li div span,
+.powerSupplyContainer ol li div span {
+  margin-right: 4px;
+  font-size: 16px;
+  font-weight: 700;
 }
 
-.devices .detectorListContainer {
-  grid-area: deviceList;
+.powerSupplyContainer ol li div span { font-size: 12px; }
+.powerSupplyContainer ol li div sup {
+  align-self: flex-start;
+  font-size: xx-small;
+  vertical-align: super;
 }
 
-.devices .deviceAmounts {
-  grid-area: deviceAmountList;
-  place-self: center;
+.systemStatusContainer .detectorsContainer,
+.systemStatusContainer .signallersContainer,
+.systemStatusContainer .accessoriesContainer {
+  width: 100%;
+  margin-bottom: 20px;
+  border-bottom: 2px solid var(--input-border-color);
 }
 
-.systemPreviewContainer .signallers {
-  display: grid;
-  grid-template-areas:
-    "description description"
-    "signallerList signallerAmountList";
-  grid-template-columns: 150px 1fr;
-}
+.systemStatusContainer .controlUnitContainer { width: 100%; }
 
-.signallers .signallerListHeader {
-  grid-area: description;
-  margin-left: 15px;
-}
-
-.signallers .signallerListContainer {
-  grid-area: signallerList;
-}
-
-.signallers .signallerAmounts {
-  grid-area: signallerAmountList;
-  place-self: center;
-}
-
-.systemPreviewContainer .accessories {
-  display: grid;
-  grid-template-areas:
-    "accessoryDescription accessoryDescription"
-    "accessoryList accessoryAmountList";
-  grid-template-columns: 150px 1fr;
-}
-
-.accessories .accessoriesListHeader {
-  grid-area: accessoryDescription;
-  margin-left: 15px;
-}
-
-.accessories .accessoriesListContainer {
-  grid-area: accessoryList;
-}
-
-.accessories .accessoriesAmounts {
-  grid-area: accessoryAmountList;
-  place-self: center;
-}
-
-.systemPreviewContainer .controlUnit {
-  display: grid;
-  grid-template-areas:
-    "controlUnitDesc controlUnitDesc"
-    "busLength lengthValue"
-    "powerConsumption consumptionValue";
-  grid-template-columns: 180px 1fr;
-}
-
-.controlUnit .controlUnitHeader {
-  grid-area: controlUnitDesc;
-  margin-left: 15px;
-}
-
-.controlUnit .busLengthDescription {
-  grid-area: busLength;
-  padding-left: 40px;
-}
-
-.controlUnit .systemPowerConsumption {
-  grid-area: powerConsumption;
-  padding-left: 40px;
-}
-
-.controlUnit .busLength {
-  grid-area: lengthValue;
-  place-self: center;
-}
-
-.controlUnit .powerConsumption {
-  grid-area: consumptionValue;
-  place-self: center;
-}
-
-.systemPreviewContainer .powerSupplyContainer {
-  border: 2px solid rgb(0, 156, 52);
-  padding: 15px 10px;
-  display: grid;
-  grid-template-areas:
-    "powerSupplyHeader"
-    "psu"
-    "wireDim"
-    "systemStatus"
-    "optimizeButton";
-  margin-top: 45px;
+.powerSupplyContainer {
+  width: 100%;
+  padding: 20px 5px 20px 30px;
+  background: var(--accent-bg-color);
+  border: 2px solid #46bd36;
 }
 
 .powerSupplyContainer .powerSupplyHeader {
